--- a/dom-i-react-functional/css/index.css
+++ b/dom-i-react-functional/css/index.css
@@ -114,6 +114,7 @@ header .logo {
     flex-flow: column;
     align-items: center;
     margin: 0 82px 0 0;
+    white-space: pre-line;
 }
 
 .cta .cta-text button {
